<resources>
    <string name="app_name">meteo</string>
    <string name="unknown_country">Unknown country</string>
    <string name="unknown_city">Unknown city</string>
    <string name="clear_sky">Clear sky</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="visibility_reduced">Visibility reduced by smoke, dust, or sand</string>
    <string name="haze">Haze</string>
    <string name="widespread_dust_in_suspension">Widespread dust in suspension</string>
    <string name="duststorm_within_sight_but_not_at_the_station">Duststorm within sight but not at the station</string>
    <string name="duststorm_at_the_station_during_the_past_hour">Duststorm at the station during the past hour</string>
    <string name="duststorm_at_the_station">Duststorm at the station</string>
    <string name="mist">Mist</string>
    <string name="patches_of_shallow_fog">Patches of shallow fog</string>
    <string name="more_or_less_continuous_shallow_fog">More or less continuous shallow fog</string>
    <string name="lightning_visible_no_thunder_heard">Lightning visible, no thunder heard</string>
    <string name="precipitation_within_sight_but_not_reaching_the_ground">Precipitation within sight but not reaching the ground</string>
    <string name="precipitation_within_sight_reaching_the_ground">Precipitation within sight reaching the ground</string>
    <string name="precipitation_within_sight_no_occurrence_at_station">Precipitation within sight, no occurrence at station</string>
    <string name="thunderstorm_but_no_precipitation_at_station">Thunderstorm but no precipitation at station</string>
    <string name="squalls_at_station">Squalls at station</string>
    <string name="funnel_cloud_s">Funnel cloud(s)</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="rain_and_snow_mixed">Rain and snow mixed</string>
    <string name="freezing_drizzle_or_freezing_rain">Freezing drizzle or freezing rain</string>
    <string name="showers_of_rain">Showers of rain</string>
    <string name="showers_of_snow">Showers of snow</string>
    <string name="showers_of_hail">Showers of hail</string>
    <string name="showers_of_rain_and_snow_mixed">Showers of rain and snow mixed</string>
    <string name="showers_of_rain_and_hail_mixed">Showers of rain and hail mixed</string>
    <string name="slight_or_moderate_dust_or_sand_storm">Slight or moderate dust or sand storm</string>
    <string name="severe_dust_or_sand_storm">Severe dust or sand storm</string>
    <string name="slight_or_moderate_blowing_snow">Slight or moderate blowing snow</string>
    <string name="heavy_drifting_snow">Heavy drifting snow</string>
    <string name="fog_in_past_hour_but_not_at_observation">Fog in past hour but not at observation</string>
    <string name="fog_in_past_hour_at_observation">Fog in past hour at observation</string>
    <string name="fog_or_ice_fog_in_past_hour_but_not_at_observation">Fog or ice fog in past hour but not at observation</string>
    <string name="fog_or_ice_fog_in_past_hour_at_observation">Fog or ice fog in past hour at observation</string>
    <string name="fog_depositing_rime">Fog depositing rime</string>
    <string name="drizzle_not_freezing_intermittent_slight">Drizzle: not freezing, intermittent, slight</string>
    <string name="drizzle_not_freezing_intermittent_moderate">Drizzle: not freezing, intermittent, moderate</string>
    <string name="drizzle_not_freezing_intermittent_heavy">Drizzle: not freezing, intermittent, heavy</string>
    <string name="freezing_drizzle_slight">Freezing drizzle, slight</string>
    <string name="freezing_drizzle_moderate">Freezing drizzle, moderate</string>
    <string name="freezing_drizzle_heavy">Freezing drizzle, heavy</string>
    <string name="rain_intermittent_slight">Rain: intermittent, slight</string>
    <string name="rain_continuous_slight">Rain: continuous, slight</string>
    <string name="rain_intermittent_moderate">Rain: intermittent, moderate</string>
    <string name="rain_continuous_moderate">Rain: continuous, moderate</string>
    <string name="rain_intermittent_heavy">Rain: intermittent, heavy</string>
    <string name="rain_continuous_heavy">Rain: continuous, heavy</string>
    <string name="freezing_rain_slight">Freezing rain, slight</string>
    <string name="freezing_rain_moderate">Freezing rain, moderate</string>
    <string name="freezing_rain_heavy">Freezing rain, heavy</string>
    <string name="intermittent_fall_of_snowflakes_slight">Intermittent fall of snowflakes, slight</string>
    <string name="continuous_fall_of_snowflakes_slight">Continuous fall of snowflakes, slight</string>
    <string name="intermittent_fall_of_snowflakes_moderate">Intermittent fall of snowflakes, moderate</string>
    <string name="continuous_fall_of_snowflakes_moderate">Continuous fall of snowflakes, moderate</string>
    <string name="intermittent_fall_of_snowflakes_heavy">Intermittent fall of snowflakes, heavy</string>
    <string name="continuous_fall_of_snowflakes_heavy">Continuous fall of snowflakes, heavy</string>
    <string name="diamond_dust_with_or_without_fog">Diamond dust (with or without fog)</string>
    <string name="snow_grains_with_or_without_fog">Snow grains (with or without fog)</string>
    <string name="isolated_star_like_snow_crystals">Isolated star-like snow crystals</string>
    <string name="ice_pellets">Ice pellets</string>
    <string name="rain_showers_slight">Rain showers, slight</string>
    <string name="rain_showers_moderate_or_heavy">Rain showers, moderate or heavy</string>
    <string name="rain_showers_violent">Rain showers, violent</string>
    <string name="showers_of_rain_and_snow_mixed_slight">Showers of rain and snow mixed, slight</string>
    <string name="showers_of_rain_and_snow_mixed_moderate_or_heavy">Showers of rain and snow mixed, moderate or heavy</string>
    <string name="snow_showers_slight">Snow showers, slight</string>
    <string name="snow_showers_moderate_or_heavy">Snow showers, moderate or heavy</string>
    <string name="snow_showers_heavy">Snow showers, heavy</string>
    <string name="showers_of_snow_pellets_or_small_hail">Showers of snow pellets or small hail</string>
    <string name="showers_of_snow_pellets_or_small_hail_with_rain_or_snow">Showers of snow pellets or small hail with rain or snow</string>
    <string name="thunderstorm_without_precipitation">Thunderstorm without precipitation</string>
    <string name="thunderstorm_with_slight_rain">Thunderstorm with slight rain</string>
    <string name="thunderstorm_with_moderate_or_heavy_rain">Thunderstorm with moderate or heavy rain</string>
    <string name="thunderstorm_with_slight_snow">Thunderstorm with slight snow</string>
    <string name="thunderstorm_with_moderate_or_heavy_snow">Thunderstorm with moderate or heavy snow</string>
    <string name="thunderstorm_slight_or_moderate">Thunderstorm, slight or moderate</string>
    <string name="thunderstorm_slight_or_moderate_with_hail">Thunderstorm, slight or moderate with hail</string>
    <string name="thunderstorm_heavy">Thunderstorm, heavy</string>
    <string name="thunderstorm_heavy_with_hail">Thunderstorm, heavy with hail</string>
    <string name="tornado">Tornado</string>
    <string name="unknown">Unknown</string>
    <string name="weather_image_representation">Weather image representation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_image">weather image</string>
    <string name="see_hourly_forecast">See hourly forecast</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="monaco">Monaco</string>
    <string name="monaco_monaco">Monaco, monaco</string>
    <string name="wednesday_may_22_2024">Wednesday, May 22 2024</string>
    <string name="precipitation_0_0mm_77">Precipitation: 0.0mm (77%)</string>
    <string name="min_19_c_max_20_2_c">Min: 19°C Max: 20.2°C</string>
    <string name="_10_12_2024_00_50">10-12-2024 00:50</string>
    <string name="humidty_22">Humidty: 22%</string>
    <string name="precipitations_1_5mm_20">Precipitations: 1.5mm (20%)</string>
    <string name="_17_6_c">17.6°C</string>
</resources>