<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginBottom="24dp"
    android:padding="12dp"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timeText"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_12_2024_00_50"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/humidityText"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:text="@string/humidty_22" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/precipitationText"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:text="@string/precipitations_1_5mm_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/weatherImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/weather_image_representation"
            />
    <TextView
        android:id="@+id/weatherText"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Partly cloudy"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
         />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/tempText"
        android:fontFamily="sans-serif"
        android:textSize="22sp"
        android:text="@string/_17_6_c" />
    </LinearLayout>
</LinearLayout>